--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -19,22 +19,54 @@ Inicio de Sesión | Banco el Dorado
                                     <h4 class="mt-1 mb-5 pb-1">Bienvenido a Banco El Dorado</h4>
                                 </div>
 
+                                <!-- Aquí van las alertas de mensajes -->
+                                {% if messages %}
+                                    <div class="max-w-lg mx-auto mt-4">
+                                        {% for message in messages %}
+                                            <div class="p-4 mb-4 text-sm 
+                                                {% if message.tags == 'success' %}
+                                                    text-green-700 bg-green-100 border border-green-400
+                                                {% elif message.tags == 'error' %}
+                                                    text-red-700 bg-red-100 border border-red-400
+                                                {% endif %}
+                                                rounded-lg" role="alert">
+                                                {{ message }}
+                                            </div>
+                                        {% endfor %}
+                                    </div>
+                                {% endif %}
+
                                 <form method="POST" action="{% url 'blog:login' %}">
                                     {% csrf_token %}
                                     <p>Inicia sesión en tu cuenta</p>
 
                                     <div data-mdb-input-init class="form-outline mb-4">
                                         <input type="text" id="username" name="username" class="form-control" placeholder="Usuario o correo electrónico" required>
-                                        <label class="form-label" for="username">Usuario o Correo Electrónico</label>
+                                        <label class="form-label" for="username"></label>
                                     </div>
 
                                     <div data-mdb-input-init class="form-outline mb-4">
                                         <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required>
-                                        <label class="form-label" for="password">Contraseña</label>
+                                        <label class="form-label" for="password"></label>
                                     </div>
-
+                                    
                                     <div class="text-center pt-1 mb-5 pb-1">
-                                        <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit">Iniciar Sesión</button>
+                                        <button
+                                        type="submit"
+                                        class="flex justify-center gap-2 items-center mx-auto shadow-xl text-lg bg-gray-50 backdrop-blur-md lg:font-semibold isolation-auto border-gray-50 before:absolute before:w-full before:transition-all before:duration-700 before:hover:w-full before:-left-full before:hover:left-0 before:rounded-full before:bg-emerald-500 hover:text-gray-50 before:-z-10 before:aspect-square before:hover:scale-150 before:hover:duration-700 relative z-10 px-4 py-2 overflow-hidden border-2 rounded-full group"
+                                        >
+                                        Ingrese
+                                        <svg
+                                            class="w-8 h-8 justify-end group-hover:rotate-90 group-hover:bg-gray-50 text-gray-50 ease-linear duration-300 rounded-full border border-gray-700 group-hover:border-none p-2 rotate-45"
+                                            viewBox="0 0 16 19"
+                                            xmlns="http://www.w3.org/2000/svg"
+                                        >
+                                            <path
+                                            d="M7 18C7 18.5523 7.44772 19 8 19C8.55228 19 9 18.5523 9 18H7ZM8.70711 0.292893C8.31658 -0.0976311 7.68342 -0.0976311 7.29289 0.292893L0.928932 6.65685C0.538408 7.04738 0.538408 7.68054 0.928932 8.07107C1.31946 8.46159 1.95262 8.46159 2.34315 8.07107L8 2.41421L13.6569 8.07107C14.0474 8.46159 14.6805 8.46159 15.0711 8.07107C15.4616 7.68054 15.4616 7.04738 15.0711 6.65685L8.70711 0.292893ZM9 18L9 1H7L7 18H9Z"
+                                            class="fill-gray-800 group-hover:fill-gray-800"
+                                            ></path>
+                                        </svg>
+                                        </button>
                                     </div>
 
                                     <div class="d-flex align-items-center justify-content-center pb-4">
@@ -48,8 +80,12 @@ Inicio de Sesión | Banco el Dorado
                         </div>
                         <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
                             <div class="text-white px-3 py-4 p-md-5 mx-md-4">
-                                <h4 class="mb-4">Somos más que una empresa</h4>
-                                <p class="small mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <h4 class="mb-4">-Banco-</h4>
+                                <p class="small mb-0">En Banco El Dorado, somos más que una institución financiera; somos tu aliado en el camino hacia el bienestar económico. Nuestra misión es ayudar a nuestros clientes a alcanzar sus metas financieras, ofreciendo productos y servicios personalizados que se adaptan a tus necesidades.
+
+                                    Con un enfoque en la confianza, la transparencia y el compromiso, trabajamos cada día para brindar un servicio excepcional que te permita crecer y prosperar. En Banco El Dorado, creemos que cada paso que das hacia tu futuro es valioso, y estamos aquí para acompañarte en cada uno de ellos.
+                                    
+                                    ¡Juntos, hagamos brillar tu futuro!</p>
                             </div>
                         </div>
                     </div>
