--- a/blog/templates/card_info.html
+++ b/blog/templates/card_info.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %} Informacion tarjeta, {{ client.name }}{% endblock %}
+{% block title %}Información tarjeta{% endblock %}
 {% block content %}
     <div class="container mt-5">
         <h1>Buscar Información de la Tarjeta</h1>
-        
+
         <!-- Formulario para ingresar el número BIN -->
         <form method="POST" class="mb-4">
             {% csrf_token %}
@@ -48,3 +48,4 @@
         {% endif %}
     </div>
 {% endblock %}
+
