implementacion foto perfil web cam

--- a/blog/templates/client/client_list.html
+++ b/blog/templates/client/client_list.html
@@ -10,7 +10,10 @@
 
 <div class="container py-5">
     <h1 class="display-6 text-primary mb-4">Client List</h1>
-    
+  
+    <a href="{% url 'blog:create_client' %}" class="btn btn-primary">Crear Cliente</a>
+
+
     <div class="row">
         <!-- Lista de Clientes -->
         <div class="col-md-8">
@@ -42,6 +45,7 @@
             </div>
         </div>
     </div>
+    <
 </div>
 
 <style>
